--- a/src/ProductRegistrationSystemAPI/ProductRegistrationSystemAPI.csproj
+++ b/src/ProductRegistrationSystemAPI/ProductRegistrationSystemAPI.csproj
@@ -30,6 +30,8 @@
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.7.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
 </Project>
