--- a/src/ProductRegistrationSystemAPITest/ProductRegistrationSystemAPITest.csproj
+++ b/src/ProductRegistrationSystemAPITest/ProductRegistrationSystemAPITest.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.4" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="6.11.0" />
+    <PackageReference Include="FluentValidation" Version="11.7.0" />
+    <PackageReference Include="FluentValidation.TestHelper" Version="11.7.0" />
   </ItemGroup>
 
   <ItemGroup>
