--- a/src/ProductRegistrationSystemAPITest/ProductRegistrationSystemAPITest.csproj
+++ b/src/ProductRegistrationSystemAPITest/ProductRegistrationSystemAPITest.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="MSTest.TestAdapter" Version="3.0.4" />
     <PackageReference Include="MSTest.TestFramework" Version="3.0.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Refit" Version="7.0.0" />
+    <PackageReference Include="Polly" Version="7.2.3" />
+    <PackageReference Include="Polly.Extensions.Http" Version="3.1.9" />
   </ItemGroup>
 
   <ItemGroup>
